[project]
name = "fudgeo"
version = "0.7.0"
description = """\
    GeoPackage support from Python.  fudgeo is a lightweight package \
    for creating OGC GeoPackages, Feature Classes, and Tables.  Easily \
    read and write geometries and attributes to Feature Classes \
    and Tables using regular Python objects and SQLite syntax.\
    """
readme = "README.md"
authors = [{ name = "Integrated Informatics Inc.", email = "contact@integrated-informatics.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["geopackage"]
dependencies = ["numpy", "Bottleneck"]
requires-python = ">=3.7"

[tool.setuptools]
packages = ["fudgeo", "fudgeo.geometry", "fudgeo.extension"]
include-package-data = true

[project.optional-dependencies]
dev = ["pytest", "coverage", "twine", "build"]

[project.urls]
Homepage = "https://github.com/realiii/fudgeo"
