[project]
name = "fudgeo"
version = "1.4.1"
description = """\
    GeoPackage support from Python.  fudgeo is a lightweight package \
    for creating OGC GeoPackages, Feature Classes, and Tables.  Easily \
    read and write geometries and attributes to Feature Classes \
    and Tables using regular Python objects and SQLite syntax.\
    """
readme = "README.md"
authors = [{ name = "Integrated Informatics (USA) Inc.", email = "contact@integrated-informatics.com" }]
license = "MIT"
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
keywords = ["geopackage"]
dependencies = [
    "numpy>=2.0.2",
]
requires-python = ">=3.9"

[tool.setuptools]
packages = ["fudgeo", "fudgeo.geometry", "fudgeo.extension"]
include-package-data = true

[dependency-groups]
dev = [
    "bottleneck>=1.5.0",
    "coverage>=7.10.7",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "shapely>=2.0.7",
]

[project.urls]
Homepage = "https://github.com/realiii/fudgeo"
